# vesper2.0

./: .env  .env.example  .gitignore  MACOS_SETUP.md  README.md  WINDOWS_SETUP.md  plan.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/: hab3_bench_assets  replica_cad
data/datasets/hssd/: rearrange
data/datasets/rearrange_pick/replica_cad/: v0
data/datasets/replica_cad/: rearrange
data/humanoids/: humanoid_data
data/objects/: ycb
data/robots/: hab_fetch
data/scene_datasets/: habitat-test-scenes  hm3d  hssd-hab
scripts/: download_datasets.py  extract_scene_info.py  vesper_habitat3d.py  vesper_objectnav.py  vesper_objectnav_sensors.py
tests/: __init__.py  test_agents.py  test_devices.py  test_event_bus.py  test_firmware.py  test_habitat.py  test_network.py  test_protocol.py
vesper/: __init__.py  __main__.py  config.py  simulation.py
vesper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
vesper/agents/: __init__.py  base.py  controller.py  llm_client.py  llm_controller.py  smart_agent.py
vesper/core/: __init__.py  environment.py  event_bus.py
vesper/devices/: __init__.py  base.py  contact_sensor.py  light_sensor.py  manager.py  motion_sensor.py  scene_configs.py  scene_device_placer.py  security_camera.py  smart_door.py
vesper/firmware/: __init__.py  bridge.py  device_fw.py  emulator.py
vesper/habitat/: __init__.py  device_placement.py  embodiment.py  hud.py  humanoid.py  integration.py  iot_bridge.py  iot_config_menu.py  iot_overlay.py  scene.py  simulator.py  smart_home.py  task_manager.py  vesper_integration.py
vesper/network/: __init__.py  broker.py  mqtt.py  router.py  transport.py
vesper/protocol/: __init__.py  codec.py  handler.py  messages.py
vesper/utils/: __init__.py  dataset.py
(+4 files in other folders)
